solve some problems

--- a/templates/ad.html
+++ b/templates/ad.html
@@ -10,9 +10,9 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">url for picture</span>
                 </div>
-                <input type="text" name="note" placeholder="пишите сюда" class="form-control">
+                <input type="text" name="url" placeholder="url for picture" class="form-control">
             </div>
-            <button type="button" class="btn btn-outline-dark btn-lg">ADD</button>
+            <button class="btn btn-outline-dark btn-lg">ADD</button>
         </form>
     </div>
 </div>
