--- a/templates/ad.html
+++ b/templates/ad.html
@@ -10,7 +10,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">url for picture</span>
                 </div>
-                <input type="text" name="url" placeholder="url for picture" class="form-control">
+                <input type="text" name="g" placeholder="url for picture" class="form-control">
             </div>
             <button class="btn btn-outline-dark btn-lg">ADD</button>
         </form>
