--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -16,7 +17,7 @@
           </div>
           <ul class="nav navbar-nav">
             <li class="active"><a href="#"></a></li>
-            <li><a href="{{ url_for('add') }}">ad picture</a></li>
+            <li><a href="{{ url_for('add_picture') }}">ad picture</a></li>
           </ul>
         </div>
       </nav>
