--- a/templates/ad.html
+++ b/templates/ad.html
@@ -7,10 +7,17 @@
         <h2>add picture</h2>
         <form action="{{ url_for('add_picture') }}" method="POST">
             <div class="input-group mb-3 input-group-lg">
+                <div class ="form-group">
+                    <input type="text" name="title" placeholder="title" >
+                </div>
                 <div class="input-group-prepend">
                     <span class="input-group-text">url for picture</span>
                 </div>
                 <input type="text" name="g" placeholder="url for picture" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="comment">Comment:</label>
+                <textarea name = "comment" placeholder="comment" class="form-control" rows="5" id="comment"></textarea>
             </div>
             <button class="btn btn-outline-dark btn-lg">ADD</button>
         </form>
