--- a/templates/ad.html
+++ b/templates/ad.html
@@ -5,13 +5,12 @@
 <div class="row">
     <div class="col-lg-6">
         <h2>add picture</h2>
-        <form action="{{ url_for('add_picture') }}" method="POST">
+        <form class="input" action="{{ url_for('add_picture') }}" method="POST">
             <div class="input-group mb-3 input-group-lg">
                 <div class ="form-group">
                     <input type="text" name="title" placeholder="title" >
                 </div>
                 <div class="input-group-prepend">
-                    <span class="input-group-text">url for picture</span>
                 </div>
                 <input type="text" name="g" placeholder="url for picture" class="form-control">
             </div>
